# chatgpt-linux-desktop

./: .gitignore  Cargo.toml  README.md
src/: asar.rs  cli.rs  extract.rs  fetch.rs  main.rs  package.rs  patch.rs
