[package]
name = "chatgpt-linux-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chatgpt-linux-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
walkdir = "2"
which = "8"
zip = "2"
